--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
     "@blitzjs/next": "2.1.3",
     "@blitzjs/rpc": "2.1.3",
     "@prisma/client": "5.4.2",
+    "autoprefixer": "10.4.20",
     "blitz": "2.1.3",
     "formik": "2.4.6",
     "next": "14.2.15",
     "pg": "8.13.1",
+    "postcss": "8.4.47",
     "prisma": "5.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "secure-password": "4.0.0",
+    "tailwindcss": "3.4.14",
     "zod": "3.23.8"
   },
   "devDependencies": {
