--- a/package.json
+++ b/package.json
@@ -29,17 +29,15 @@
     "@blitzjs/next": "2.1.3",
     "@blitzjs/rpc": "2.1.3",
     "@prisma/client": "5.4.2",
-    "autoprefixer": "10.4.20",
     "blitz": "2.1.3",
     "formik": "2.4.6",
     "next": "14.2.15",
     "pg": "8.13.1",
-    "postcss": "8.4.47",
     "prisma": "5.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "5.3.0",
     "secure-password": "4.0.0",
-    "tailwindcss": "3.4.14",
     "zod": "3.23.8"
   },
   "devDependencies": {
@@ -53,16 +51,19 @@
     "@typescript-eslint/eslint-plugin": "5.42.1",
     "@vitejs/plugin-react": "2.2.0",
     "ajv": "^7.0.0",
+    "autoprefixer": "10.4.20",
     "eslint": "8.27.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "8.5.0",
     "husky": "8.0.2",
     "jsdom": "20.0.3",
     "lint-staged": "13.0.3",
+    "postcss": "8.4.47",
     "prettier": "^2.7.1",
     "prettier-plugin-prisma": "4.4.0",
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.7",
+    "tailwindcss": "3.4.14",
     "typescript": "^4.8.4",
     "vite-tsconfig-paths": "3.6.0",
     "vitest": "0.25.3"
